# MustangRadio_develepementVersion

./: .gitignore  README.md  et --hard HEAD~1
01 Hardware - developement/!!!BOMs/: 04_LED_display.csv  TDA7419 preamp.csv  esp32 bluetooth.csv  power_supply.csv  si468x.csv
01 Hardware - developement/01 Power supply_relay/: fp-lib-table  power_supply.kicad_pcb  power_supply.kicad_prl  power_supply.kicad_pro  power_supply.kicad_sch
01 Hardware - developement/02 TDA741x preamp/: ProductsList.xls  katalog_farnell.txt
01 Hardware - developement/03 LED_display/: 04_LED_display.kicad_pcb  04_LED_display.kicad_pcb-bak  04_LED_display.kicad_prl  04_LED_display.kicad_pro  04_LED_display.kicad_sch  04_LED_display.net  04_LED_display.sch  04_LED_display.sch-bak  04_LED_display.xml  fp-info-cache  sym-lib-table
01 Hardware - developement/03C ESP32 jtag hat/: ESP32 jtag hat.kicad_pcb  ESP32 jtag hat.kicad_prl  ESP32 jtag hat.kicad_pro  ESP32 jtag hat.kicad_sch  fp-info-cache
01 Hardware - developement/03b ESP32 bluetooth & HMI/: esp32 bluetooth.kicad_pcb  esp32 bluetooth.kicad_prl  fp-lib-table  (+6 more)
02_Firmware/: Guru Meditation Error Core  0 panic.txt  git_long_path.txt  i2c_engine.cpp  nowe guru.txt
02_Firmware/01_ESP32/ESP32-A2DP_test/main/: CMakeLists.txt  hello_world_main.cpp
02_Firmware/01_ESP32/ESP32-A2DP_test/main/ESP32-A2DP_class/: ESP32-A2DP_class.cpp  ESP32-A2DP_class.h
02_Firmware/01_ESP32/HMI_and_bluetooth/main/: .cproject  .project  CMakeLists.txt  app_main — kopia.cpp.old  app_main.cpp  chip_config_ESP32_WROOM32D_DEVBOARD.h  comunicationProtocol.h  exception_example_main.cpp  hwConfigFile.h
02_Firmware/01_ESP32/HMI_and_bluetooth/main/03_Common/: comunicationProtocol.h  comunication_calculate_checksum.cpp  comunication_calculate_checksum.h
02_Firmware/01_ESP32/HMI_and_bluetooth/main/Leds/: Leds_backlight.cpp  Leds_backlight.h
02_Firmware/01_ESP32/HMI_and_bluetooth/main/MCP23008/: MCP23008.cpp  MCP23008.h
02_Firmware/01_ESP32/HMI_and_bluetooth/main/NVSeeprom/: NVSeeprom.cpp  NVSeeprom.h
02_Firmware/01_ESP32/HMI_and_bluetooth/main/StepperOpto/: StepperOpto.cpp  StepperOpto.h
02_Firmware/01_ESP32/HMI_and_bluetooth/main/StepperOptoInterMux/: StepperOptoInterMux.cpp  StepperOptoInterMux.h
02_Firmware/01_ESP32/HMI_and_bluetooth/main/StepperOptoPowerOFF/: StepperOptoPowerOFF.cpp  StepperOptoPowerOFF.h
02_Firmware/01_ESP32/HMI_and_bluetooth/main/a2dpSikn/: a2dp_sink_demo.cpp  a2dp_sink_demo_main_incl_err.h
02_Firmware/01_ESP32/HMI_and_bluetooth/main/bt_audio/: bt_audio — kopia.cpp  bt_audio.cpp  bt_audio.h
02_Firmware/01_ESP32/HMI_and_bluetooth/main/common/comunicationProtocol/: comunicationProtocol.cpp  comunicationProtocol.h
02_Firmware/01_ESP32/HMI_and_bluetooth/main/common/comunicationStructures/: comunicationStructures.cpp  comunicationStructures.h
02_Firmware/01_ESP32/HMI_and_bluetooth/main/common/comunication_calculate_checksum/: comunication_calculate_checksum.cpp  comunication_calculate_checksum.h
02_Firmware/01_ESP32/HMI_and_bluetooth/main/common/i2c_slave_master_queueClass/: i2c_slave_master_queueClass.cpp  i2c_slave_master_queueClass.h
02_Firmware/01_ESP32/HMI_and_bluetooth/main/i2c_engine/: i2c_engine.cpp  i2c_engine.h  i2c_engine.h.bak  i2c_engine_master.cpp  i2c_engine_master.h  i2c_engine_slave.cpp  i2c_engine_slave.h
02_Firmware/01_ESP32/HMI_and_bluetooth/main/i2c_master/: i2c_master.cpp  i2c_master.h  my_i2c_master.cpp
02_Firmware/01_ESP32/HMI_and_bluetooth/main/i2c_slave/: i2c_slave.cpp  i2c_slave.h  i2c_slave_hw_init.c  i2c_slave_hw_init.h  my_i2c_slave.cpp  my_i2c_slave.h  my_i2c_slave_hw_init.c  my_i2c_slave_hw_init.h
02_Firmware/01_ESP32/HMI_and_bluetooth/main/i2sHighImpedance/: i2sHighImpedance.cpp  i2sHighImpedance.h
02_Firmware/01_ESP32/HMI_and_bluetooth/main/keyboard/: keyboard.cpp  keyboard.h
02_Firmware/01_ESP32/HMI_and_bluetooth/main/my_i2c_master/: my_i2c_master.cpp  my_i2c_master.h
02_Firmware/01_ESP32/HMI_and_bluetooth/main/my_i2c_slave/: my_i2c_slave.cpp  my_i2c_slave.h
02_Firmware/01_ESP32/HMI_and_bluetooth/main/tasksFunctions/: tasksFunctions.cpp  tasksFunctions.h  tasksFunctionsLeds.h  tasksFunctionsStepperMotor.cpp  tasksFunctionsStepperMotor.h
02_Firmware/01_ESP32/bt_test_1/main/: CMakeLists.txt  exception_example_main.cpp
02_Firmware/01_ESP32/bt_test_1/main/bt_audio/: bt_audio copy.cpp  bt_audio.cpp  bt_audio.h
(+5535 files in other folders)
